Revision history for POE-Component-NetSNMP-agent

0.400   2012.11.14  (SAPER)
        [BUGFIX] Work around a bad interaction between the way Perl handles
        lexicals and the way NetSNMP::agent's setValue() tries to handle more
        than one type of value.
        [BUGFIX] Fixed add_oid_tree.
        [FEATURE] New, even simpler API.
        [TESTS] t/90-pod.t also makes use of Pod::Checker.

0.300   2011.07.18  (SAPER)
        [FEATURE] Added Ping option to automatically recover from a lost
        connection with the AgentX master.
        [DIST] Add missing prereq parent.pm

0.200   2011.07.11  (SAPER)
        [BUGFIX] Rework the way communication sockets are managed to make
        the module work with NetSNMP::agent 5.4
        [FEATURE] Added Autohandle option, to provide an easy-to-use API
        a la SNMP::Extension::PassPersist.

0.100   2011.06.20  (SAPER)
        First version released.
